css/style.css
.animated-icon1, .animated-icon2, .animated-icon3 {
    width: 30px;
    height: 20px;
    position: relative;
    margin: 0px;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .5s ease-in-out;
    -moz-transition: .5s ease-in-out;
    -o-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    cursor: pointer;
}
    
.animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
    display: block;
    position: absolute;
    height: 3px;
    width: 100%;
    border-radius: 9px;
    opacity: 1;
    left: 0;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .25s ease-in-out;
    -moz-transition: .25s ease-in-out;
    -o-transition: .25s ease-in-out;
    transition: .25s ease-in-out;
}
    
.animated-icon1 span {
    background: white;
}
    
.animated-icon1 span:nth-child(1) {
    top: 0px;
}
    
.animated-icon1 span:nth-child(2) {
    top: 10px;
}
    
.animated-icon1 span:nth-child(3) {
    top: 20px;
}
    
.animated-icon1.open span:nth-child(1) {
    top: 11px;
    -webkit-transform: rotate(135deg);
    -moz-transform: rotate(135deg);
    -o-transform: rotate(135deg);
    transform: rotate(135deg);
}
    
.animated-icon1.open span:nth-child(2) {
    opacity: 0;
    left: -60px;
}
    
.animated-icon1.open span:nth-child(3) {
    top: 11px;
    -webkit-transform: rotate(-135deg);
    -moz-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    transform: rotate(-135deg);
}

.color1{
    background-color: #1c2226;		
}
    
.imgS:hover{
    background-color: #dddddd;		
    border-radius: 150px;
}
    
.text-style:hover{
    background-color: black;
    border-radius: 30px;	
    padding: 10px 10px 10px 10px;
    color:white;
    display: flex;
    justify-content: center;
}

.Introduzione-Title {
    font-size: 60.8px;
    line-height: 62.8px;
    margin: 0;
    font-weight: 600;
    padding: 10px 0px 10px 0px;
    color: #61dafb;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
}

.Contenitore-Title{
    display: flex;
    justify-content: center;
    align-items: center;
}

.Contenitore-Spiegazione{
    border-radius: 10px;
    background-color: #1c2226;
    color: white;
    padding: 10px 0px 10px 0px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
    letter-spacing: .3px;
}

.sh-box{
    box-shadow:  3px 3px 3px 3px #6d5c5c;
}

.Centra-Testo{
    display: flex;
    justify-content: center;
    margin-left: 5px;
}

h1{
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black!important;
}

h5{
    color:white!important;
}

.mt-In{
    margin-top: 100px;
}

.rid-Em{
    font-size: 15px;
}

@media screen and (max-width: 570px) {
    .rid-Em{
        font-size: 10px;
    }
}

@media screen and (max-width: 570px) {
    .Introduzione-Title {
        font-size: 35.8px;
        line-height: 62.8px;
        margin: 0;
        font-weight: 600;
        padding: 10px 0px 10px 0px;
        color: #61dafb;
    }
}

.b{
    border: 1px solid black;

    display: flex;
    justify-content: center;
}

/* CREAZIONE TABELLONE */

.bastone{
    background-color: #1c2226;
    width: 100%;
    height: 20px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
    position: absolute;
    border: 1px solid rgb(6, 6, 20);
}

.cerchio1{
    border-radius: 50%;
    background-color: #828e9e;
    height: 50px;
    width: 50px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
    margin-top: -35px;
    border: 1px solid rgb(6, 6, 20);
}

.buco1{
    border-radius: 50%;
    background-color: #1c2226;
    border: 1px solid black;
    height: 20px;
    width: 20px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
}

.cerchio2{
    border-radius: 50%;
    background-color: #828e9e;
    height: 50px;
    width: 50px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
    margin-top: -35px;
    border: 1px solid rgb(6, 6, 20);

}

.buco2{
    border-radius: 50%;
    background-color: #1c2226;
    border: 1px solid black;
    height: 20px;
    width: 20px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
}

.catena1{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    background-color: #828e9e;
    height: 200px;
    width: 20px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
    margin-top: -35px;
    border: 1px solid rgb(6, 6, 20);

    position: relative;
    animation-name: AnimateCatena;
    animation-duration: 1.5s;
    animation-iteration-count: infinite;
}

.catena2{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    background-color: #828e9e;
    height: 200px;
    width: 20px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
    margin-top: -35px;
    border: 1px solid rgb(6, 6, 20);
    position: relative;
    animation-name: AnimateCatena;
    animation-duration: 1.5s;
    animation-iteration-count: infinite;
}

.Tabellone{
    border-radius: 20px;
    background-color: #1c2226;
    height: 400px;
    width: 750px;
    box-shadow:  3px 3px 3px 3px #6d5c5c;
    margin-top: -35px;
    border: 2px solid #61dafb;
    position: relative;
    animation-name: AnimateTabellone;
    animation-duration: 1.5s;
    animation-iteration-count: infinite;
}

@keyframes AnimateCatena{
    0%   {left:0px; top:0px;}
    25%  {left:45px; top:-12px;}
    50%  {left:45px; top:-12px;}
    100%  {left:0px; top:0px;}

    0%   {transform: rotate(360deg)}
    25%  {transform: rotate(330deg)}
    50%  {transform: rotate(330deg)}
    100%  {transform: rotate(360deg)}

}

@keyframes AnimateTabellone {
    0%   {left:0px; top:0px;}
    25%  {left:80px; top:0px;}
    50%  {left:80px; top:0px;}
    100%  {left:0px; top:0px;}
}

.Introduzione-Title2 {
    font-size: 45.8px;
    line-height: 62.8px;
    margin: 0;
    font-weight: 600;
    padding: 10px 0px 10px 0px;
    color: white;
}

/* TABELLONE RESPONSIVE */

@media screen and (max-width: 1100px){
    .Introduzione-Title2 {
        font-size: 35.8px;
        line-height: 62.8px;
        margin: 0;
        font-weight: 600;
        padding: 10px 0px 10px 0px;
        color: white;
    }

    .catena1{
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #828e9e;
        height: 100px;
        width: 20px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }
    
    .catena2{
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #828e9e;
        height: 100px;
        width: 20px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }

    .Tabellone{
        border-radius: 20px;
        background-color: #1c2226;
        height: 200px;
        width: 750px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }

    @keyframes AnimateCatena{
        0%   {left:0px; top:0px;}
        25%  {left:20px; top:-6px;}
        50%  {left:20px; top:-6px;}
        100%  {left:0px; top:0px;}
    
        0%   {transform: rotate(360deg)}
        25%  {transform: rotate(330deg)}
        50%  {transform: rotate(330deg)}
        100%  {transform: rotate(360deg)}
    
    }

    @keyframes AnimateTabellone {
        0%   {left:0px; top:0px;}
        25%  {left:40px; top:0px;}
        50%  {left:40px; top:0px;}
        100%  {left:0px; top:0px;}
    }
    
}

@media screen and (max-width: 640px) {
    .Introduzione-Title2 {
        font-size: 25.8px;
        line-height: 62.8px;
        margin: 0;
        font-weight: 600;
        padding: 10px 0px 10px 0px;
        color: white;
    }

    .catena1{
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #828e9e;
        height: 100px;
        width: 20px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }
    
    .catena2{
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #828e9e;
        height: 100px;
        width: 20px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }

    .Tabellone{
        border-radius: 20px;
        background-color: #1c2226;
        height: 200px;
        width: 750px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }
}

@media screen and (max-width: 480px) {
    .Introduzione-Title2 {
        font-size: 18.8px;
        line-height: 62.8px;
        margin: 0;
        font-weight: 600;
        padding: 10px 0px 10px 0px;
        color: white;
    }

    .catena1{
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #828e9e;
        height: 100px;
        width: 20px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }
    
    .catena2{
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #828e9e;
        height: 100px;
        width: 20px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }

    .Tabellone{
        border-radius: 20px;
        background-color: #1c2226;
        height: 100px;
        width: 750px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }

}

@media screen and (max-width: 380px) {
    .Introduzione-Title2 {
        font-size: 12.8px;
        line-height: 62.8px;
        margin: 0;
        font-weight: 600;
        padding: 10px 0px 10px 0px;
        color: white;
    }

    .catena1{
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #828e9e;
        height: 100px;
        width: 20px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }
    
    .catena2{
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        background-color: #828e9e;
        height: 100px;
        width: 20px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }

    .Tabellone{
        border-radius: 20px;
        background-color: #1c2226;
        height: 100px;
        width: 750px;
        box-shadow:  3px 3px 3px 3px #6d5c5c;
    }

    .Centra-Testo{
        font-size: 10.8px;
    }

    .rid-Em{
        font-size: 9.5px;
    }

}

/* FINE CREAZIONE TABELLONE */

.Code_Style{
    background: #1c2226;
    border-left: 5px solid #61dafb;
    border-radius: 5px;
    color: #f7f7f7;
    display: block;
    font-family: arial;
    font-size: 14px;
    font-weight: 700;
    width: 100%;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 0px;
}

.orange{
    color: #cca11b
}

.green{
    color: #6cad72
}

.blue{
    color: #19539c
}

.purple{
    color: #826ed9
}

/* scroll bar */
::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-track {
    border-radius: 10px;
    width: 10px;
}

::-webkit-scrollbar-thumb {
    background-color: #576064;
    border-radius: 10px;
}

::-webkit-scrollbar-track-piece {
    width: 2px;
}

/* code example scrollbar */
.Code_Style::-webkit-scrollbar-thumb {
    background-color: #232a2e;
    border-radius: 10px;
}

.Code_Style::-webkit-scrollbar {
    height: 10px!important;
}

body{
    background-color: #323b41!important;
    overflow-x:hidden;
}

.SubTitle{
    border-left: 2px solid #61dafb;
    margin-bottom: 15px;
    display: flex;
    justify-content: start;
}

.Subtext{
    font-family: arial;
    font-size: 20px;
    color: white;
    margin-left: 10px;
}

.Intro-Centarta{
    text-align: center;
    margin: 20px 0;
    padding: 20px;
}

.typing-effect{
    width: 22ch;
    animation: typing 2s steps(22), effect .5s step-end infinite alternate;
    white-space: nowrap;
    overflow: hidden;
    border-right: 3px solid;
    font-family: monospace;
    font-size: 1.3em;
}

@keyframes typing{
    from{
        width: 0
    }
}

@keyframes effect{
    50%{
        border-color: transparent;
    }
}

